# wofo-blofo

./: AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
componets/cjson/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Makefile  cJSON_Utils.c
componets/cjson/tests/: misc_tests.c  parse_number.c
componets/sd1306/: CMakeLists.txt  Kconfig.projbuild  ssd1306.c  ssd1306.h  ssd1306_i2c_legacy.c  ssd1306_i2c_new.c  ssd1306_spi.c
main/: CMakeLists.txt  main.c
pi_controller/: README.md  communicator.py  formatter.py  main.py  wigle.py
