cmake_minimum_required(VERSION 3.5)
include($ENV{IDF_PATH}/tools/cmake/project.cmake)
project(esp32_2432s028r)

set(EXTRA_COMPONENT_DIRS
    $ENV{IDF_PATH}/examples/common_components/protocol_examples_common
    $ENV{IDF_PATH}/examples/common_components/esp-tls
    $ENV{IDF_PATH}/examples/common_components/spiffs_image
    $ENV{IDF_PATH}/examples/common_components/console_basic
    $ENV{IDF_PATH}/examples/common_components/esp_modem
    $ENV{IDF_PATH}/examples/common_components/esp_http_client
    $ENV{IDF_PATH}/examples/common_components/esp_https_ota
    $ENV{IDF_PATH}/examples/common_components/esp_ringbuf
    $ENV{IDF_PATH}/examples/common_components/esp_wifi
    $ENV{IDF_PATH}/examples/common_components/esp_eth
    $ENV{IDF_PATH}/examples/common_components/esp_event
    $ENV{IDF_PATH}/examples/common_components/esp_netif
    $ENV{IDF_PATH}/examples/common_components/esp_tls
    $ENV{IDF_PATH}/examples/common_components/tcp_transport
    $ENV{IDF_PATH}/examples/common_components/udp_transport
    $ENV{IDF_PATH}/examples/common_components/esp_http_server
    $ENV{IDF_PATH}/examples/common_components/esp_https_server
    $ENV{IDF_PATH}/examples/common_components/esp_websocket_client
    $ENV{IDF_PATH}/examples/common_components/esp_coredump
    $ENV{IDF_PATH}/examples/common_components/esp_rom
    $ENV{IDF_PATH}/examples/common_components/esp_flash
    $ENV{IDF_PATH}/examples/common_components/esp_partition
    $ENV{IDF_PATH}/examples/common_components/esp_spiffs
    $ENV{IDF_PATH}/examples/common_components/esp_phy
    $ENV{IDF_PATH}/examples/common_components/esp_psram
    $ENV{IDF_PATH}/examples/common_components/esp_system
    $ENV{IDF_PATH}/examples/common_components/esp_timer
    $ENV{IDF_PATH}/examples/common_components/esp_wifi
    $ENV{IDF_PATH}/examples/common_components/esp_eth
    $ENV{IDF_PATH}/examples/common_components/esp_event
    $ENV{IDF_PATH}/examples/common_components/esp_netif
    $ENV{IDF_PATH}/examples/common_components/esp_tls
    $ENV{IDF_PATH}/examples/common_components/esp_http_client
    $ENV{IDF_PATH}/examples/common_components/esp_https_ota
    $ENV{IDF_PATH}/examples/common_components/esp_ringbuf
    $ENV{IDF_PATH}/examples/common_components/esp_modem
    $ENV{IDF_PATH}/examples/common_components/esp_console
    $ENV{IDF_PATH}/examples/common_components/esp_adc_cal
    $ENV{IDF_PATH}/examples/common_components/esp_gdbstub
    $ENV{IDF_PATH}/examples/common_components/esp_hw_support
    $ENV{IDF_PATH}/examples/common_components/esp_ipc
    $ENV{IDF_PATH}/examples/common_components/esp_rom
    $ENV{IDF_PATH}/examples/common_components/esp_flash
    $ENV{IDF_PATH}/examples/common_components/esp_partition
    $ENV{IDF_PATH}/examples/common_components/esp_spiffs
    $ENV{IDF_PATH}/examples/common_components/esp_phy
    $ENV{IDF_PATH}/examples/common_components/esp_psram
    $ENV{IDF_PATH}/examples/common_components/esp_system
    $ENV{IDF_PATH}/examples/common_components/esp_timer
    $ENV{IDF_PATH}/examples/common_components/driver
    $ENV{IDF_PATH}/examples/common_components/esp_wifi
    $ENV{IDF_PATH}/examples/common_components/esp_eth
    $ENV{IDF_PATH}/examples/common_components/esp_event
    $ENV{IDF_PATH}/examples/common_components/esp_netif
    $ENV{IDF_PATH}/examples/common_components/esp_tls
    $ENV{IDF_PATH}/examples/common_components/esp_http_client
    $ENV{IDF_PATH}/examples/common_components/esp_https_ota
    $ENV{IDF_PATH}/examples/common_components/esp_ringbuf
    $ENV{IDF_PATH}/examples/common_components/esp_modem
    $ENV{IDF_PATH}/examples/common_components/esp_console
    $ENV{IDF_PATH}/examples/common_components/esp_adc_cal
    $ENV{IDF_PATH}/examples/common_components/esp_gdbstub
    $ENV{IDF_PATH}/examples/common_components/esp_hw_support
    $ENV{IDF_PATH}/examples/common_components/esp_ipc
    $ENV{IDF_PATH}/examples/common_components/esp_rom
    $ENV{IDF_PATH}/examples/common_components/esp_flash
    $ENV{IDF_PATH}/examples/common_components/esp_partition
    $ENV{IDF_PATH}/examples/common_components/esp_spiffs
    $ENV{IDF_PATH}/examples/common_components/esp_phy
    $ENV{IDF_PATH}/examples/common_components/esp_psram
    $ENV{IDF_PATH}/examples/common_components/esp_system
    $ENV{IDF_PATH}/examples/common_components/esp_timer
    $ENV{IDF_PATH}/examples/common_components/esp_wifi
    $ENV{IDF_PATH}/examples/common_components/esp_eth
    $ENV{IDF_PATH}/examples/common_components/esp_event
    $ENV{IDF_PATH}/examples/common_components/esp_netif
    $ENV{IDF_PATH}/examples/common_components/esp_tls
    $ENV{IDF_PATH}/examples/common_components/esp_http_client
    $ENV{IDF_PATH}/examples/common_components/esp_https_ota
    $ENV{IDF_PATH}/examples/common_components/esp_ringbuf
    $ENV{IDF_PATH}/examples/common_components/esp_modem
    $ENV{IDF_PATH}/examples/common_components/esp_console
    $ENV{IDF_PATH}/examples/common_components/esp_adc_cal
    $ENV{IDF_PATH}/examples/common_components/esp_gdbstub
    $ENV{IDF_PATH}/examples/common_components/esp_hw_support
    $ENV{IDF_PATH}/examples/common_components/esp_ipc
)

add_executable(${CMAKE_PROJECT_NAME} main/main.c)
